# semantic-api0

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  config.yaml  example.sh  prompts.yaml  result.md
.github/workflows/: build.yml
data/: conversations.db
proto/: sentence_service.proto
src/: analyze_sentence.rs  cli.rs  comparison_test.rs  conversation.rs  endpoint_client.rs  general_question_handler.rs  grpc_server.rs  help_response_handler.rs  helpers.rs  json_helper.rs  main.rs  progressive_matching.rs  sentence_analysis.rs  sentence_service.rs
src/analysis/: analyze_sentence_enhanced.rs  mod.rs  parameter_extraction.rs  progressive_handler.rs  response_builders.rs  retry_logic.rs
src/models/: config.rs  mod.rs
src/models/providers/: claude.rs  cohere.rs  deepseek.rs  mod.rs  token_counter.rs  tracked_provider.rs
src/prompts/: mod.rs
src/utils/: email.rs  mod.rs  path_params.rs  token_calculator.rs
src/workflow/: context.rs  engine.rs  mod.rs  steps.rs
src/workflow/actions/: classify_intent.rs  find_closest_endpoint.rs  match_fields.rs  mod.rs  sentence_to_json.rs
src/workflow/steps/: endpoint_matching.rs  enhanced_config_loading.rs  field_matching.rs  json_generation.rs  mod.rs  path_parameter_extraction.rs
