[package]
name = "semantic"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["gzip", "tls"] }
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
prost = "0.13.4"
http = "1.2.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
clap = { version = "4.5.30", features = ["derive"] }
async-trait = "0.1.86"
dotenv = "0.15.0"
h2 = "0.4.10"
env = "1.0.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.16"
tokio-postgres = { version = "0.7.14", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
graflog = "1.4.2"


[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "semantic"
path = "src/main.rs"
